<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customize_app_drawer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.options.CustomizeAppDrawerFragment">

    <TextView
        android:id="@+id/customize_app_drawer_fragment_visible_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/customize_app_drawer_fragment_visible_apps" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/customize_app_drawer_open_keyboard_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="32dp"
        android:text="@string/customize_app_drawer_fragment_open_keyboard"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_fragment_visible_apps"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/customize_app_drawer_auto_device_theme_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginBottom="32dp"
        android:text="@string/customize_app_drawer_fragment_auto_theme_wallpaper_text"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toBottomOf="@id/customize_app_drawer_open_keyboard_switch"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>