<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/home_motion_scene">

    <TextView
        android:id="@+id/home_fragment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64sdp"
        android:text="@string/main_placeholder_clock"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/_40ssp" />

    <TextView
        android:id="@+id/home_fragment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_4sdp"
        android:text="@string/main_placeholder_date"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="@dimen/_12sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/main_fragment_list_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_fragment_list_exp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/main_fragment_list_item" />

    <ImageView
        android:id="@+id/home_fragment_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:srcCompat="@drawable/ic_cog"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/home_fragment_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:srcCompat="@drawable/ic_call"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/home_fragment_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:srcCompat="@drawable/ic_photo_camera"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/app_drawer_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_apps_fragment_search_apps"
        android:imeOptions="actionDone"
        android:inputType="none|textNoSuggestions|textCapWords"
        android:textSize="@dimen/_18ssp"
        tools:ignore="Autofill,LabelFor"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="32dp" />

    <ImageView
        android:id="@+id/app_drawer_sort_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:srcCompat="@drawable/ic_sort_alpha"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="367dp" />

    <ImageView
        android:id="@+id/app_drawer_sort_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        app:srcCompat="@drawable/ic_sort_time"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="367dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/app_drawer_fragment_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="80dp"
        tools:listitem="@layout/add_app_fragment_list_item" />
</androidx.constraintlayout.motion.widget.MotionLayout>